--- a/main.css
+++ b/main.css
@@ -5,7 +5,7 @@ body{
 
 /*first div on homepage*/
 #intro{
-	background:url('img/panel1.png')no-repeat center ;
+	background:url('https://cloud.githubusercontent.com/assets/7635998/8732319/a66e95e6-2bca-11e5-92a0-c9069dd25435.png')no-repeat center ;
 	text-align:center;
 	height:650px;
 }
